deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app
  labels:
    app: iot-app
spec:
  selector:
    matchLabels:
      app: iot-app
  template:
    metadata:
      labels:
        app: iot-app
    spec:
      containers:
        - name: iot-app
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
