service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: playground
  name: playground
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: playground
    app: playground
